# bl2sdk-mods

./: .gitignore  .gitmodules  README.md  bundle_mods.py  pyproject.toml
akevent_player/: __init__.py  akevent_player.sdkmod  pyproject.toml
bl2eternal/: __init__.py  bl2eternal.sdkmod  pyproject.toml
bl2eternal/mechanics/: dashing.py  glorykill.py
blimgui/: __init__.py  pyproject.toml
coroutines/: __init__.py  coroutines.sdkmod  gametime.py  loop.py  pyproject.toml
decent_console/: __init__.py  commands.py  console.py  decent_console.sdkmod  pyproject.toml  readme.md  suggestions.py
decent_console/builtins/: __init__.py  debug.py  freezeat.py  getall.py  misc.py  obj_cmds.py  set_cmd.py  stat_cmds.py
inventory_editor/: __init__.py  inventory_editor.sdkmod  pyproject.toml
inventory_editor/backpack/: __init__.py  classes.py  parts.py
inventory_editor/ui/: __init__.py  components.py  editor.py  inventory.py
mateditor/: __init__.py  export.py  mateditor.sdkmod  materials.py  pyproject.toml
mateditor/ui/: __init__.py  editor.py  materials.py  menubar.py  popups.py
paintball/: __init__.py  paintball.sdkmod  pyproject.toml
photomode/: __init__.py  photomode.sdkmod  pyproject.toml
ping/: __init__.py  ping.sdkmod  pyproject.toml  settings.py
quick_startup/: __init__.py  pyproject.toml  quick_startup.sdkmod
sliding/: __init__.py  pyproject.toml  sliding.sdkmod
tracelib/: __init__.py  pyproject.toml  trace_info.pyi  tracelib.sdkmod
tweens/: README.md  __init__.py  easing.py  pyproject.toml  tween.py  tweens.sdkmod
uemath/: __init__.py  constants.py  pyproject.toml  uemath.sdkmod  uetypes.pyi  umath.py
uemath/structs/: __init__.py  rotators.py  vectors.py
