[project]
name = "bl2eternal"
version = "1.0.2"
authors = [{ name = "juso" }]
description = """\
Doom Eternal, but it's BL2.\n
Adds in-air dashing and glory kills for critically low health enemies.
"""
dependencies = [
  "uemath >= 1.0",
  "coroutines >= 1.0",
]



[tool.sdkmod]
name = "BL2 Eternal"
coop_support = "RequiresAllPlayers"
license = {name = "MIT", url = "https://choosealicense.com/licenses/mit/" }
download = "https://github.com/juso40/bl2sdk-mods/raw/refs/heads/main/bl2eternal/bl2eternal.sdkmod"