[project]
name = "decent_console"
version = "0.3"
authors = [{ name = "juso" }]
description = """\
My attempt at improving the ingame console by adding:

- ctrl+backspace to delete the last word
- ctrl+delete to delete the next word
- ctrl+left/right to move the cursor by word
- auto-completion for commands by pressing tab
- switch between suggestions with ctrl+up/down
"""
dependencies = [
]

[tool.sdkmod]
name = "Decent Console"
license = {name = "MIT", url = "https://choosealicense.com/licenses/mit/" }
download = "https://github.com/juso40/bl2sdk-mods/raw/refs/heads/main/decent_console/decent_console.sdkmod"