[project]
name = "decent_console"
version = "1.0"
authors = [{ name = "juso" }]
description = """\
My attempt at improving the ingame console by adding:

- ctrl+backspace to delete the last word
- ctrl+delete to delete the next word
- ctrl+left/right to move the cursor by word
- auto-completion for commands by pressing tab
- switch between suggestions or history with up/down
- suggestions will show up upon typing or ctrl+space
- pressing escape will close the suggestions/history and clear the input
"""
dependencies = [
]

[tool.sdkmod]
name = "Decent Console"
license = {name = "MIT", url = "https://choosealicense.com/licenses/mit/" }
download = "https://github.com/juso40/bl2sdk-mods/raw/refs/heads/main/decent_console/decent_console.sdkmod"