[project]
name = "tracelib"
version = "1.1"
authors = [{ name = "juso" }]
description = """\
A library that allows devs to easily trace ingame objects.
"""
dependencies = [
  "uemath >= 1.0",
]

[tool.sdkmod]
name = "tracelib"
license = {name = "MIT", url = "https://choosealicense.com/licenses/mit/" }
download = "https://github.com/juso40/bl2sdk-mods/raw/refs/heads/main/tracelib/tracelib.sdkmod"