[project]
name = "uemath"
version = "1.0"
authors = [{ name = "juso" }]
description = """\
A math library with support for UEVectors and UERotators.
"""


[tool.sdkmod]
name = "uemath"
license = {name = "MIT", url = "https://choosealicense.com/licenses/mit/" }
download = "https://github.com/juso40/bl2sdk-mods/raw/refs/heads/main/uemath/uemath.sdkmod"